--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -611,11 +611,11 @@ of the entropy residual, the derivation of which is given in Appendix A, is the 
 \resi(\vec{r},t) := \partial_t s + \vec{u} \cdot \grad s = \matder{s} = \frac{s_e}{P_e} \left( \underbrace{\matder{P} - c^2 \matder{\rho} }_{\resinew(\vec{r},t)} \right) ,
 \end{equation} 
 %
-where $\matder{\ }$ denotes the material derivative ($\matder{\ }:= \frac{\partial}{\partial t} + \vec{u} \cdot \grad$), and $x_y$ 
+where $\matder{\ }$ denotes the material derivative ($\matder{\ }:= \frac{\partial }{\partial t} + \vec{u} \cdot \grad $), and $x_y$ 
 is the standard shorthand notation for the partial derivative of $x$ with respect to $y$, e.g., $P_e:=\frac{\partial P}{\partial e}$. 
 %
-The entropy residuals $\resi$ and $\resinew$ are proportional to one another and will experience similar 
-variations in space and time. When using the SGEOS, the coefficient of proportionality $\frac{s_e}{P_e}$ can be recast under the form $\frac{s_e}{P_e} = \frac{C_v ( \gamma-1)}{P + \gamma P_\infty}$ which remains positive. Thus, one may elect to employ $\resinew$ instead of $\resi$ for the evaluation 
+When using the SGEOS, the coefficient of proportionality $\frac{s_e}{P_e}$ can be recast under the form $\frac{s_e}{P_e} = \frac{C_v ( \gamma-1)}{P + \gamma P_\infty}$ which remains positive. Note that the definition of the speed of sound can be used to show that $\resinew$ is zero when the flow becomes isentropic. The entropy residuals $\resi$ and $\resinew$ are proportional to one another and will experience similar 
+variations in space and time. Thus, one may elect to employ $\resinew$ instead of $\resi$ for the evaluation 
 of the local entropy residual. The new expression presents several advantages which include:
 %
 \begin{itemize}
@@ -647,7 +647,7 @@ J^K( t) = \max_{f\in\partial K}  \max_{\vec{r}_q \in f} || \Big( \vec{u}(\vec{r}
 \end{equation}
 \end{subequations}
 %
-Note that now the jump operator $J^K$ acts on the variables appearing in $\resinew$, namely, pressure and density. 
+Note that now the jump operator $J^K$ acts on the variables appearing in $\resinew$, namely, pressure and density. The residual $\resinew$ and the pressure jump will only contribute to the viscosity coefficients in the shock region. On the other hand, the density jump will contribute both in contact and shock regions. 
 The $\mu$ and $\kappa$ coefficients are kinematic viscosities (units of $m^2/s$); the normalization 
 parameters $\norm_P$ are thus in units of pressure, hence the use of the subscript $P$.  Note also 
 that we are not requiring the same normalization for both $\mu_e$ and $\kappa_e$ so the entropy viscosity 
@@ -671,7 +671,7 @@ viscosity coefficients so that the dissipative terms remain well-scaled for two 
 equations in the low-Mach limit and 
 (ii) the non-isentropic limit with formation of shocks. 
 The isentropic limit of the Euler equations with viscous regularization should yield incompressible 
-fluid flow solutions in the low-Mach limit, namely, that the pressure fluctuations are of the 
+fluid flow solutions in the low-Mach limit, namely, that the spatial steady-state pressure variations are of the 
 order $M^2$ and that the velocity satisfies the divergence constraint $\div \vec{u}_0 = 0$ 
 \cite{LowMach1, LowMach2, LowMach3}. For non-isentropic situations, shocks may form for any 
 value of Mach number and the minimum entropy principle should still be satisfied so that numerical 
@@ -884,6 +884,8 @@ choice, option (a), has the proper scaling: in this case, only the dissipation t
 $\gradd{s,*} \vec{u}^*$ scale as $1/M_\infty^2$ since $\Re_\infty = M_\infty^2$, leaving the 
 regularization of the continuity equation unaffected because $\Pe_\infty = 1$.
 %
+%When using the definition of the first-order viscosity coefficient $\mu_{max}$, it can be shown that the Reynolds and P\'eclet numbers scale as the inverse of the Mach number leading to ill-scaled dissipative terms in the low-Mach limit. This behavior is undesirable when the numerical solution is smooth but make the viscous regularization over-dissipative in the shock region where the second-order viscosity coefficient saturates to the first-order viscosity coefficient. 
+%
 %Thus, it is chosen to use option (a) to solve the non-isentropic form of the Euler equations. Under this assumption, the scaling of the Prandtl number can be derived using \eqt{eq:ref_nb_pr}: $\Pr_\infty = M_\infty^{-2}$.
 %
 %Before performing a low-Mach asymptotic limit, it is proposed to determine the scaling of the Prandtl number. It can be shown that the P\'echlet number is a function of the Reynolds and Prandtl number as follows:$Pe_\infty = Re_\infty Pr_\infty$. Using the condition imposed by (a) and the previous relation, it is easily derived that the Prandtl number scales as the inverse of the Mach number: $Pr_\infty = M_\infty^2$.
@@ -892,7 +894,7 @@ regularization of the continuity equation unaffected because $\Pe_\infty = 1$.
 %On the other hand, the viscosity coefficient $\kappa$ is present in all of the equations (\eqt{eq:Euler_eq2}) and, thus $\Pe_\infty = M_\infty^2$ is a reasonable choice to provide adequate dissipation for all equations in the shock regions. 
 %Regarding the scaling of the numerical Reynolds, setting of $\Re_\infty=1$ yields numerical dissipation terms that scales identically to the modified Roe scheme proposed by Guillard et al. for low-Mach flows \cite{LowMach1} (see the dissipation term on velocity in Eqs. (48)-(49) of \cite{LowMach1} and in our \eqt{eq:euler_eq2_mom}).
 %
-
+%
 %===================================================================================================
 \subsection{An All-speed normalization of the entropy residual} \label{sec:new_normaliz}
 %===================================================================================================
@@ -1047,9 +1049,6 @@ and supersonic flows.
 %same order of magnitude, which is consistent with the original definition of the entropy viscosity 
 %method \cite{jlg1, jlg2} recalled in \sct{sec:background}.
 %
-\begin{remark}\label{rm:ill-scaled}
-When using the definition of the first-order viscosity coefficient $\mu_{max}$, it can be shown that the Reynolds and P\'eclet numbers scale as the inverse of the Mach number leading to ill-scaled dissipative terms in the low-Mach limit. This behavior is undesirable but in the shock region where the second-order viscosity coefficient saturates to the first-order viscosity coefficient.
-\end{remark}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%s%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1398,7 +1397,7 @@ In \fig{fig:1d_liq_nozzle}, the numerical solutions obtained using the first-ord
 viscosity method (EVM) are plotted against the exact solution. The numerical solution obtained with the EVM and the 
 exact solution overlap, even for a fairly coarse mesh (50 cells).
 On the other hand, the numerical solution obtained with the FOV does not give the correct steady state: this is an 
-illustration of the effect of ill-scaled dissipative terms in the low-Mach limit that was pointed out in \rmk{rm:ill-scaled}.
+illustration of the effect of ill-scaled dissipative terms in the low-Mach limit when using the FOV.
 %
 Note that the entropy viscosity coefficient is very small compared to the first-order one (\fig{fig:1d_nozzle_liq_visc}): 
 (i) the numerical solution is smooth as shown in \fig{fig:1d_liq_nozzle} and (ii) the flow is in a isentropic low-Mach regime 
@@ -1695,7 +1694,6 @@ stabilize the numerical scheme.
                 \caption{Density, velocity and pressure profiles.}
                 \label{fig:1d_strong_shock_var}
         \end{subfigure}%
-
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{LiquidSrongShock_viscosity.png}
@@ -1744,7 +1742,6 @@ the \emph{local maximum eigenvalue} $||\vec{u}||+c$ and not to the eigenvalue of
                 \caption{Velocity, density and pressure}
                 \label{fig:profiles_sms}
         \end{subfigure}%
-
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{SlowMovingShock_viscosity.png}
@@ -1766,12 +1763,12 @@ The main features of the potential flow are the following:
 \begin{itemize}
 \item The solution is symmetric: the iso-Mach contour lines are used to assess the symmetry of the numerical solution;
 \item The velocity at the top of the cylinder is twice the incoming velocity set at the inlet;
-\item The steady-state pressure fluctuations are proportional to the square of inlet Mach number, i.e., 
+\item The spatial steady-state pressure variations are proportional to the square of inlet Mach number, i.e., 
 \begin{equation}
 \delta P = \frac{\max(P(\vec{r})) - \min(P(\vec{r}))}{\max(P(\vec{r}))}  \propto M_\infty^2
 %||\tilde{\vec{u}}|| = \frac{\max(||\vec{u}||) - \min(||\vec{u}||)}{\max(||\vec{u}||)}  \propto M_\infty\nonumber 
 \end{equation}
-where $\delta P$ and $M_\infty$ denote the steady-state pressure fluctuations and the inlet Mach number, respectively.
+where $\delta P$ and $M_\infty$ denote the spatial steady-state pressure variations and the inlet Mach number, respectively.
 \end{itemize}
 %
 The computational domain consists of a $1\times 1$ square with a circular hole of radius $0.05$ in its center. 
@@ -1853,24 +1850,24 @@ $10^{-3}$ & $2.348$ $10^{-3}$ & $1.176$ $10^{-3}$& $1.99$  \\ \hline
 $10^{-4}$ & $2.285$ $10^{-4}$ & $1.145$ $10^{-4}$& $1.99$  \\ \hline
 $10^{-5}$ & $2.283$ $10^{-5}$ & $1.144$ $10^{-5}$ & $1.99$ \\ \hline
 $10^{-6}$ & $2.283$ $10^{-6}$ & $1.144$ $10^{-6}$ & $1.99$ \\ \hline
-$10^{-7}$ & $2.283$ $10^{-7}$ & $1.144$ $10^{-7}$ & $1.99$ \\ \hline
+$10^{-7}$ & $2.283$ $10^{-7}$ & $1.144$ $10^{-7}$ & $1.99$ \\ \hline 
 \end{tabular}
 \end{center}
 \nonumber
 \end{table}
 %
-In \fig{fig:pressure_vel_fluc}, the fluctuations in pressure and velocity are plotted as a function of the 
-Mach number (on a log-log scale). The pressure fluctuations are expected to be of the order of $M^2$ in the incompressible limit, 
-which we observe. From Bernoulli's principle, this implies that the velocity fluctuations should be of order $M$ 
+In \fig{fig:pressure_vel_fluc}, the spatial steady-state variations in pressure and velocity are plotted as a function of the 
+Mach number (on a log-log scale). The spatial steady-state pressure variations are expected to be of the order of $M^2$ in the incompressible limit, 
+which we observe. From Bernoulli's principle, this implies that the velocity spatial variations should be of order $M$ 
 in the incompressible limit, which we also observe in \fig{fig:pressure_vel_fluc}. 
 It is known that some stabilization methods, e.g., \cite{LowMach1, LowMach2, LowMach3}, 
-can produce pressure fluctuations with the wrong Mach-number order. Here, the entropy viscosity method yields 
+can produce spatial steady-state pressure variations with the wrong Mach-number order. Here, the entropy viscosity method yields 
 the correct orders in the low-Mach limit. For ease of comparison, reference lines with slope values of 1 and 2 are also plotted.
 %
 \begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{pressure_fluctuation.png}
-\caption{Log-log plot of the steady-state pressure and velocity fluctuations as a function of the far-field Mach number.}
+\caption{Log-log plot of the spatial steady-state pressure and velocity variations as a function of the far-field Mach number.}
 \label{fig:pressure_vel_fluc}
 \end{figure}
 
@@ -2044,7 +2041,7 @@ and 0.5 (L$_2$-norm).
 
 The effectiveness of the method was also demonstrated in 2-D using a series of benchmark problems
 for both subsonic and supersonic flows in various geometries, with Mach numbers ranging from $10^{-7}$ to 
-2.5. For very low-Mach flows, we numerically verified that the pressure fluctuations were proportional to 
+2.5. For very low-Mach flows, we numerically verified that the spatial steady-state pressure variations were proportional to 
 the square of the Mach number, as expected in the incompressible limit.
 
 In the future, we plan to further extend the entropy viscosity method to the seven-equation two-phase flow fluid model \cite{SEM}. 
@@ -2057,7 +2054,7 @@ This two-phase flow system of equations is a good candidate for two reasons: it 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Acknowledgments} 
 The authors (M.D. and J.R.) would like to thank Bojan Popov and Jean-Luc Guermond for many fruitful discussions.  
-the research was carried out under the auspices the Idaho National Laboratory for the US Department of Energy.
+The research was carried out under the auspices the Idaho National Laboratory for the US Department of Energy.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
