moved all of the figures in a folder called figures/ and changed the tex file accordingly

--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -1367,26 +1367,26 @@ for the numerical and exact solutions. The viscosity coefficients are also graph
         \centering
         \begin{subfigure}[b]{0.5\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{liquid_mach_numerical_and_exact_50.png}
+                \includegraphics[width=\textwidth]{figures/liquid_mach_numerical_and_exact_50.png}
                 \caption{Mach number}
                 \label{fig:1d_nozzle_liq_vel}
         \end{subfigure}%
         \begin{subfigure}[b]{0.5\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{liquid_density_numerical_and_exact_50.png}
+                \includegraphics[width=\textwidth]{figures/liquid_density_numerical_and_exact_50.png}
                 \caption{Density}
                 \label{fig:1d_nozzle_liq_density}
         \end{subfigure}
         
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{liquid_pressure_numerical_and_exact_50.png}
+                \includegraphics[width=\textwidth]{figures/liquid_pressure_numerical_and_exact_50.png}
                 \caption{Pressure}
                 \label{fig:1d_nozzle_liq_press}
         \end{subfigure}        
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{liquid_viscosity_numerical50.png}
+                \includegraphics[width=\textwidth]{figures/liquid_viscosity_numerical50.png}
                 \caption{Viscosity coefficients}
                 \label{fig:1d_nozzle_liq_visc}
         \end{subfigure}
@@ -1468,26 +1468,26 @@ mesh with $500$ cells, is shown in \fig{fig:1d_vap_nozzle}. The $CFL$ was set to
         \centering
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{vapor_mach_numerical_and_exact_500.png}
+                \includegraphics[width=\textwidth]{figures/vapor_mach_numerical_and_exact_500.png}
                 \caption{Mach number}
                 \label{fig:1d_nozzle_vap_vel}
         \end{subfigure}%
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{vapor_density_numerical_and_exact_500.png}
+                \includegraphics[width=\textwidth]{figures/vapor_density_numerical_and_exact_500.png}
                 \caption{Density}
                 \label{fig:1d_nozzle_vap_density}
         \end{subfigure}
 
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{vapor_pressure_numerical_and_exact_500.png}
+                \includegraphics[width=\textwidth]{figures/vapor_pressure_numerical_and_exact_500.png}
                 \caption{Pressure}
                 \label{fig:1d_nozzle_vap_press}
         \end{subfigure}
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{vapor_viscosity_numerical_500.png}
+                \includegraphics[width=\textwidth]{figures/vapor_viscosity_numerical_500.png}
                 \caption{Viscosity coefficients}
                 \label{fig:1d_nozzle_vap_visc}
         \end{subfigure}
@@ -1575,7 +1575,7 @@ $3200$, and $6000$ cells and a constant $CFL = 1$.
         \centering
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{Leblanc_exact_and_numerical_stt_density_6000.png}
+                \includegraphics[width=\textwidth]{figures/Leblanc_exact_and_numerical_stt_density_6000.png}
                 \caption{Density}
                 \label{fig:1d_leblanc_vel}
         \end{subfigure}%
@@ -1583,7 +1583,7 @@ $3200$, and $6000$ cells and a constant $CFL = 1$.
           %(or a blank line to force the subfigure onto a new line)
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{Leblanc_exact_and_numerical_stt_momentum_6000.png}
+                \includegraphics[width=\textwidth]{figures/Leblanc_exact_and_numerical_stt_momentum_6000.png}
                 \caption{Momentum}
                 \label{fig:1d_leblanc_density}
         \end{subfigure}
@@ -1591,7 +1591,7 @@ $3200$, and $6000$ cells and a constant $CFL = 1$.
           %(or a blank line to force the subfigure onto a new line)
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{Leblanc_exact_and_numerical_stt_total_energy_6000.png}
+                \includegraphics[width=\textwidth]{figures/Leblanc_exact_and_numerical_stt_total_energy_6000.png}
                 \caption{Total energy}
                 \label{fig:1d_leblanc_press}
         \end{subfigure}
@@ -1599,7 +1599,7 @@ $3200$, and $6000$ cells and a constant $CFL = 1$.
           %(or a blank line to force the subfigure onto a new line)
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{Leblanc_viscosity_numerical_6000.png}
+                \includegraphics[width=\textwidth]{figures/Leblanc_viscosity_numerical_6000.png}
                 \caption{Viscosity coefficients}
                 \label{fig:1d_leblanc_visc}
         \end{subfigure}
@@ -1690,13 +1690,13 @@ stabilize the numerical scheme.
         \centering
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{LiquidSrongShock_density_velocity_pressure_profiles.png}
+                \includegraphics[width=\textwidth]{figures/LiquidSrongShock_density_velocity_pressure_profiles.png}
                 \caption{Density, velocity and pressure profiles.}
                 \label{fig:1d_strong_shock_var}
         \end{subfigure}%
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{LiquidSrongShock_viscosity.png}
+                \includegraphics[width=\textwidth]{figures/LiquidSrongShock_viscosity.png}
                 \caption{Viscosity coefficients profile.}
                 \label{fig:1d_strong_shock_visc}
         \end{subfigure}
@@ -1738,13 +1738,13 @@ the \emph{local maximum eigenvalue} $||\vec{u}||+c$ and not to the eigenvalue of
         \centering
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{SlowMovingShock_density_velocity_pressure_profiles.png}
+                \includegraphics[width=\textwidth]{figures/SlowMovingShock_density_velocity_pressure_profiles.png}
                 \caption{Velocity, density and pressure}
                 \label{fig:profiles_sms}
         \end{subfigure}%
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{SlowMovingShock_viscosity.png}
+                \includegraphics[width=\textwidth]{figures/SlowMovingShock_viscosity.png}
                 \caption{Viscosity coefficients}
                 \label{fig:viscosity_sms}
         \end{subfigure} 
@@ -1800,33 +1800,33 @@ $2\times 10^{-10}$ to $M_{\text{inlet}}$.
         \centering
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{CylinderMach1em3ZoomIn.png}
+                \includegraphics[width=\textwidth]{figures/CylinderMach1em3ZoomIn.png}
                 \caption{$M_{\text{inlet}}=10^{-3}$}
                 \label{fig:cyl_1em3}
         \end{subfigure}%
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{CylinderMach1em4ZoomIn.png}
+                \includegraphics[width=\textwidth]{figures/CylinderMach1em4ZoomIn.png}
                 \caption{$M_{\text{inlet}}=10^{-4}$}
                 \label{fig:cyl_1em4}
         \end{subfigure}    
 
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{CylinderMach1em5ZoomIn.png}
+                \includegraphics[width=\textwidth]{figures/CylinderMach1em5ZoomIn.png}
                 \caption{$M_{\text{inlet}}=10^{-5}$}
                 \label{fig:cyl_1em5}
         \end{subfigure}
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{CylinderMach1em6ZoomIn.png}
+                \includegraphics[width=\textwidth]{figures/CylinderMach1em6ZoomIn.png}
                 \caption{$M_{\text{inlet}}=10^{-6}$}
                 \label{fig:cyl_1em6}
         \end{subfigure}
 
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{CylinderMach1em7ZoomIn.png}
+                \includegraphics[width=\textwidth]{figures/CylinderMach1em7ZoomIn.png}
                 \caption{$M_{\text{inlet}}=10^{-7}$}
                 \label{fig:cyl_1em7}
         \end{subfigure}
@@ -1866,7 +1866,7 @@ the correct orders in the low-Mach limit. For ease of comparison, reference line
 %
 \begin{figure}[H]
 \centering
-\includegraphics[width=\textwidth]{pressure_fluctuation.png}
+\includegraphics[width=\textwidth]{figures/pressure_fluctuation.png}
 \caption{Log-log plot of the spatial steady-state pressure and velocity variations as a function of the far-field Mach number.}
 \label{fig:pressure_vel_fluc}
 \end{figure}
@@ -1897,28 +1897,28 @@ and the simulations were run until steady state.
         \centering
         \begin{subfigure}[b]{\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{Hump2D_mach_0p7.png}
+                \includegraphics[width=\textwidth]{figures/Hump2D_mach_0p7.png}
                 \caption{Mach $0.7$}
                 \label{fig:2d_hump_mach_0p7}
         \end{subfigure}%
 
         \begin{subfigure}[b]{\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{Hump2D_mach_0p01.png}
+                \includegraphics[width=\textwidth]{figures/Hump2D_mach_0p01.png}
                 \caption{Mach $10^{-2}$}
                 \label{fig:2d_hump_mach_0p01}
         \end{subfigure}%
         
         \begin{subfigure}[b]{\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{Hump2D_mach_1em4.png}
+                \includegraphics[width=\textwidth]{figures/Hump2D_mach_1em4.png}
                 \caption{Mach $10^{-5}$}
                 \label{fig:2d_hump_mach_0p0001}
         \end{subfigure}
 
         \begin{subfigure}[b]{\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{Hump2D_mach_1em7.png}
+                \includegraphics[width=\textwidth]{figures/Hump2D_mach_1em7.png}
                 \caption{Mach $10^{-7}$}
                 \label{fig:2d_hump_mach_0p0000001}
         \end{subfigure}
@@ -1979,26 +1979,26 @@ the compression corner problems (corner angle of $15^\circ$ and inlet $M=2.5$ (a
         \centering
         \begin{subfigure}[b]{0.52\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{CompressionCorner2D_mach.png}
+                \includegraphics[width=\textwidth]{figures/CompressionCorner2D_mach.png}
                 \caption{Mach number}
                 \label{fig:2d_corner_mach}
         \end{subfigure}%
         \begin{subfigure}[b]{0.52\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{CompressionCorner2D_viscosity.png}
+                \includegraphics[width=\textwidth]{figures/CompressionCorner2D_viscosity.png}
                 \caption{Viscosity coefficients}
                 \label{fig:2d_corner_visc}
         \end{subfigure}
         
         \begin{subfigure}[b]{0.49\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{mach_number_pressure.png}
+                \includegraphics[width=\textwidth]{figures/mach_number_pressure.png}
                 \caption{Pressure and Mach number}
                 \label{fig:2d_corner_isomach}
         \end{subfigure}        
         \begin{subfigure}[b]{0.49\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{CompressionCorner2DQ.png}
+                \includegraphics[width=\textwidth]{figures/CompressionCorner2DQ.png}
                 \caption{Difference between inlet and outlet mass flow rates as a function of time.}
                 \label{fig:2d_convergence}
         \end{subfigure}
